bk_ida/gccida/c1/get_alias_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/alias.c:960:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v10 = lang_hooks_0.get_alias_set( v9); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/alias.c:960:33: error: called object type '<dependent type>' is not a function or function pointer
v10 = lang_hooks_0.get_alias_set( v9); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/alias.c:1066:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( v30[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/alias.c:1094:30: error: use of undeclared identifier 'lang_hooks_0'
pointer_alias_set = ( tree *)lang_hooks_0.get_alias_set( section_name); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_alias_set/src/obj/alias.o] Error 1
